Fixing flickering when switching pages in dark theme & add resource to .gitignore

--- a/assets/css/_core/_base.scss
+++ b/assets/css/_core/_base.scss
@@ -39,7 +39,7 @@ html {
   }
 }
 
-body {
+html {
   background-color: $global-background-color;
   color: $global-font-color;
   @include overflow-wrap(break-word);
